// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Molecules/Avatar passes the snapshot test for different sizes 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [],
        },
      }
    }
    collapsable={false}
    direction="horizontal"
    spacing="s"
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "transform": Array [],
      }
    }
  >
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 12,
          "transform": Array [],
        }
      }
    >
      <View
        accessibilityRole="image"
        accessible={true}
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        loaderType="spinner"
        size="s"
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#F7F9FC",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderColor": "#FFFFFF",
            "borderRadius": 1000,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "borderWidth": 2,
            "display": "flex",
            "height": 40,
            "justifyContent": "center",
            "transform": Array [],
            "width": 40,
          }
        }
        tint="dark"
        overlayTransitionDuration={600}
      >
        <View
          animatedStyle={
            Object {
              "value": Object {
                "transform": Array [],
              },
            }
          }
          collapsable={false}
          style={
            Object {
              "bottom": 0,
              "display": "flex",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "transform": Array [],
              "width": "100%",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "justifyContent": "center",
                },
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "color": "#C5CEE0",
                    "flex": 0,
                  },
                ],
              ]
            }
          >
            <View
              accessibilityLabel="Loading indicator"
              accessibilityRole="progressbar"
              accessible={true}
              animating={true}
              spinnerSize={15}
              style={
                Object {
                  "height": 15,
                  "width": 15,
                }
              }
              variant="spinner"
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "rotate": "82.5deg",
                        },
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 15,
                          "transform": Array [
                            Object {
                              "translateY": 0,
                            },
                            Object {
                              "rotate": "-172.5deg",
                            },
                          ],
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          Object {
                            "height": 7.5,
                            "overflow": "hidden",
                            "width": 15,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "borderColor": "#C5CEE0",
                              "borderRadius": 7.5,
                              "borderWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "rotate": "82.5deg",
                        },
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "top": 7.5,
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 15,
                          "transform": Array [
                            Object {
                              "translateY": -7.5,
                            },
                            Object {
                              "rotate": "352.5deg",
                            },
                          ],
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          Object {
                            "height": 7.5,
                            "overflow": "hidden",
                            "width": 15,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "borderColor": "#C5CEE0",
                              "borderRadius": 7.5,
                              "borderWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 12,
          "transform": Array [],
        }
      }
    >
      <View
        accessibilityRole="image"
        accessible={true}
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        loaderType="spinner"
        size="m"
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#F7F9FC",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderColor": "#FFFFFF",
            "borderRadius": 1000,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "borderWidth": 2,
            "display": "flex",
            "height": 55,
            "justifyContent": "center",
            "transform": Array [],
            "width": 55,
          }
        }
        tint="dark"
        overlayTransitionDuration={600}
      >
        <View
          animatedStyle={
            Object {
              "value": Object {
                "transform": Array [],
              },
            }
          }
          collapsable={false}
          style={
            Object {
              "bottom": 0,
              "display": "flex",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "transform": Array [],
              "width": "100%",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "justifyContent": "center",
                },
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "color": "#C5CEE0",
                    "flex": 0,
                  },
                ],
              ]
            }
          >
            <View
              accessibilityLabel="Loading indicator"
              accessibilityRole="progressbar"
              accessible={true}
              animating={true}
              spinnerSize={15}
              style={
                Object {
                  "height": 15,
                  "width": 15,
                }
              }
              variant="spinner"
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "rotate": "82.5deg",
                        },
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 15,
                          "transform": Array [
                            Object {
                              "translateY": 0,
                            },
                            Object {
                              "rotate": "-172.5deg",
                            },
                          ],
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          Object {
                            "height": 7.5,
                            "overflow": "hidden",
                            "width": 15,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "borderColor": "#C5CEE0",
                              "borderRadius": 7.5,
                              "borderWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "rotate": "82.5deg",
                        },
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "top": 7.5,
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 15,
                          "transform": Array [
                            Object {
                              "translateY": -7.5,
                            },
                            Object {
                              "rotate": "352.5deg",
                            },
                          ],
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          Object {
                            "height": 7.5,
                            "overflow": "hidden",
                            "width": 15,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "borderColor": "#C5CEE0",
                              "borderRadius": 7.5,
                              "borderWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 12,
          "transform": Array [],
        }
      }
    >
      <View
        accessibilityRole="image"
        accessible={true}
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        loaderType="spinner"
        size="l"
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#F7F9FC",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderColor": "#FFFFFF",
            "borderRadius": 1000,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "borderWidth": 2,
            "display": "flex",
            "height": 70,
            "justifyContent": "center",
            "transform": Array [],
            "width": 70,
          }
        }
        tint="dark"
        overlayTransitionDuration={600}
      >
        <View
          animatedStyle={
            Object {
              "value": Object {
                "transform": Array [],
              },
            }
          }
          collapsable={false}
          style={
            Object {
              "bottom": 0,
              "display": "flex",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "transform": Array [],
              "width": "100%",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "justifyContent": "center",
                },
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "color": "#C5CEE0",
                    "flex": 0,
                  },
                ],
              ]
            }
          >
            <View
              accessibilityLabel="Loading indicator"
              accessibilityRole="progressbar"
              accessible={true}
              animating={true}
              spinnerSize={15}
              style={
                Object {
                  "height": 15,
                  "width": 15,
                }
              }
              variant="spinner"
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "rotate": "82.5deg",
                        },
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 15,
                          "transform": Array [
                            Object {
                              "translateY": 0,
                            },
                            Object {
                              "rotate": "-172.5deg",
                            },
                          ],
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          Object {
                            "height": 7.5,
                            "overflow": "hidden",
                            "width": 15,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "borderColor": "#C5CEE0",
                              "borderRadius": 7.5,
                              "borderWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "rotate": "82.5deg",
                        },
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "top": 7.5,
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 15,
                          "transform": Array [
                            Object {
                              "translateY": -7.5,
                            },
                            Object {
                              "rotate": "352.5deg",
                            },
                          ],
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          Object {
                            "height": 7.5,
                            "overflow": "hidden",
                            "width": 15,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "borderColor": "#C5CEE0",
                              "borderRadius": 7.5,
                              "borderWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "transform": Array [],
        }
      }
    >
      <View
        accessibilityRole="image"
        accessible={true}
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        loaderType="spinner"
        size="xl"
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#F7F9FC",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderColor": "#FFFFFF",
            "borderRadius": 1000,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "borderWidth": 2,
            "display": "flex",
            "height": 85,
            "justifyContent": "center",
            "transform": Array [],
            "width": 85,
          }
        }
        tint="dark"
        overlayTransitionDuration={600}
      >
        <View
          animatedStyle={
            Object {
              "value": Object {
                "transform": Array [],
              },
            }
          }
          collapsable={false}
          style={
            Object {
              "bottom": 0,
              "display": "flex",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "transform": Array [],
              "width": "100%",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "justifyContent": "center",
                },
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "color": "#C5CEE0",
                    "flex": 0,
                  },
                ],
              ]
            }
          >
            <View
              accessibilityLabel="Loading indicator"
              accessibilityRole="progressbar"
              accessible={true}
              animating={true}
              spinnerSize={15}
              style={
                Object {
                  "height": 15,
                  "width": 15,
                }
              }
              variant="spinner"
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "rotate": "82.5deg",
                        },
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 15,
                          "transform": Array [
                            Object {
                              "translateY": 0,
                            },
                            Object {
                              "rotate": "-172.5deg",
                            },
                          ],
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          Object {
                            "height": 7.5,
                            "overflow": "hidden",
                            "width": 15,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "borderColor": "#C5CEE0",
                              "borderRadius": 7.5,
                              "borderWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "rotate": "82.5deg",
                        },
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "top": 7.5,
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 15,
                          "transform": Array [
                            Object {
                              "translateY": -7.5,
                            },
                            Object {
                              "rotate": "352.5deg",
                            },
                          ],
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          Object {
                            "height": 7.5,
                            "overflow": "hidden",
                            "width": 15,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "borderColor": "#C5CEE0",
                              "borderRadius": 7.5,
                              "borderWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [],
        },
      }
    }
    collapsable={false}
    direction="horizontal"
    spacing="s"
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginTop": 12,
        "transform": Array [],
      }
    }
  >
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 12,
          "transform": Array [],
        }
      }
    >
      <View
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        size="s"
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#ff0000",
            "borderColor": "#FFFFFF",
            "borderRadius": 1000,
            "borderWidth": 2,
            "display": "flex",
            "height": 40,
            "justifyContent": "center",
            "transform": Array [],
            "width": 40,
          }
        }
      >
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          animatedStyle={
            Object {
              "value": Object {
                "transform": Array [],
              },
            }
          }
          collapsable={false}
          style={
            Object {
              "color": "#FFFFFF",
              "display": "flex",
              "fontFamily": "Poppins-Regular",
              "fontSize": 13.799999999999999,
              "fontStyle": "normal",
              "fontWeight": "400",
              "includeFontPadding": false,
              "letterSpacing": 0,
              "lineHeight": 20,
              "transform": Array [],
            }
          }
          variant="caption"
        >
          RA
        </Text>
      </View>
    </View>
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 12,
          "transform": Array [],
        }
      }
    >
      <View
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        size="m"
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#ff0000",
            "borderColor": "#FFFFFF",
            "borderRadius": 1000,
            "borderWidth": 2,
            "display": "flex",
            "height": 55,
            "justifyContent": "center",
            "transform": Array [],
            "width": 55,
          }
        }
      >
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          animatedStyle={
            Object {
              "value": Object {
                "transform": Array [],
              },
            }
          }
          collapsable={false}
          style={
            Object {
              "color": "#FFFFFF",
              "display": "flex",
              "fontFamily": "Poppins-Regular",
              "fontSize": 18.4,
              "fontStyle": "normal",
              "fontWeight": "400",
              "includeFontPadding": false,
              "letterSpacing": 0,
              "lineHeight": 28,
              "transform": Array [],
            }
          }
          variant="p1"
        >
          J
        </Text>
      </View>
    </View>
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 12,
          "transform": Array [],
        }
      }
    >
      <View
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        size="l"
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#ff0000",
            "borderColor": "#FFFFFF",
            "borderRadius": 1000,
            "borderWidth": 2,
            "display": "flex",
            "height": 70,
            "justifyContent": "center",
            "transform": Array [],
            "width": 70,
          }
        }
      >
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          animatedStyle={
            Object {
              "value": Object {
                "transform": Array [],
              },
            }
          }
          collapsable={false}
          style={
            Object {
              "color": "#FFFFFF",
              "display": "flex",
              "fontFamily": "Poppins-Regular",
              "fontSize": 18.4,
              "fontStyle": "normal",
              "fontWeight": "400",
              "includeFontPadding": false,
              "letterSpacing": 0,
              "lineHeight": 28,
              "transform": Array [],
            }
          }
          variant="p1"
        >
          SG
        </Text>
      </View>
    </View>
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "transform": Array [],
        }
      }
    >
      <View
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        size="xl"
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#ff0000",
            "borderColor": "#FFFFFF",
            "borderRadius": 1000,
            "borderWidth": 2,
            "display": "flex",
            "height": 85,
            "justifyContent": "center",
            "transform": Array [],
            "width": 85,
          }
        }
      >
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          animatedStyle={
            Object {
              "value": Object {
                "transform": Array [],
              },
            }
          }
          collapsable={false}
          style={
            Object {
              "color": "#FFFFFF",
              "display": "flex",
              "fontFamily": "Poppins-Regular",
              "fontSize": 29.9,
              "fontStyle": "normal",
              "fontWeight": "400",
              "includeFontPadding": false,
              "letterSpacing": 0,
              "lineHeight": 38,
              "transform": Array [],
            }
          }
          variant="p1"
        >
          Y
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Molecules/Avatar passes the snapshot test for fallback support 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [],
        },
      }
    }
    collapsable={false}
    direction="horizontal"
    spacing="s"
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "transform": Array [],
      }
    }
  >
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 12,
          "transform": Array [],
        }
      }
    >
      <View
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#ff0000",
            "borderColor": "#FFFFFF",
            "borderRadius": 1000,
            "borderWidth": 2,
            "display": "flex",
            "height": 55,
            "justifyContent": "center",
            "transform": Array [],
            "width": 55,
          }
        }
      >
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          animatedStyle={
            Object {
              "value": Object {
                "transform": Array [],
              },
            }
          }
          collapsable={false}
          style={
            Object {
              "color": "#FFFFFF",
              "display": "flex",
              "fontFamily": "Poppins-Regular",
              "fontSize": 18.4,
              "fontStyle": "normal",
              "fontWeight": "400",
              "includeFontPadding": false,
              "letterSpacing": 0,
              "lineHeight": 28,
              "transform": Array [],
            }
          }
          variant="p1"
        >
          RA
        </Text>
      </View>
    </View>
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 12,
          "transform": Array [],
        }
      }
    >
      <View
        accessibilityRole="image"
        accessible={true}
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        fallbackSource={
          Object {
            "uri": "https://cdn.segmentnext.com/wp-content/themes/segmentnext/images/no-image-available.jpg",
          }
        }
        loaderType="spinner"
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#ff0000",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderColor": "#FFFFFF",
            "borderRadius": 1000,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "borderWidth": 2,
            "display": "flex",
            "height": 55,
            "justifyContent": "center",
            "transform": Array [],
            "width": 55,
          }
        }
        tint="dark"
        overlayTransitionDuration={600}
      >
        <View
          animatedStyle={
            Object {
              "value": Object {
                "transform": Array [],
              },
            }
          }
          collapsable={false}
          style={
            Object {
              "bottom": 0,
              "display": "flex",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "transform": Array [],
              "width": "100%",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "justifyContent": "center",
                },
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "color": "#C5CEE0",
                    "flex": 0,
                  },
                ],
              ]
            }
          >
            <View
              accessibilityLabel="Loading indicator"
              accessibilityRole="progressbar"
              accessible={true}
              animating={true}
              spinnerSize={15}
              style={
                Object {
                  "height": 15,
                  "width": 15,
                }
              }
              variant="spinner"
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "rotate": "82.5deg",
                        },
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 15,
                          "transform": Array [
                            Object {
                              "translateY": 0,
                            },
                            Object {
                              "rotate": "-172.5deg",
                            },
                          ],
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          Object {
                            "height": 7.5,
                            "overflow": "hidden",
                            "width": 15,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "borderColor": "#C5CEE0",
                              "borderRadius": 7.5,
                              "borderWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "rotate": "82.5deg",
                        },
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "top": 7.5,
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 15,
                          "transform": Array [
                            Object {
                              "translateY": -7.5,
                            },
                            Object {
                              "rotate": "352.5deg",
                            },
                          ],
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          Object {
                            "height": 7.5,
                            "overflow": "hidden",
                            "width": 15,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "borderColor": "#C5CEE0",
                              "borderRadius": 7.5,
                              "borderWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "transform": Array [],
        }
      }
    >
      <View
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#EDF1F7",
            "borderColor": "#FFFFFF",
            "borderRadius": 1000,
            "borderWidth": 2,
            "display": "flex",
            "height": 55,
            "justifyContent": "center",
            "transform": Array [],
            "width": 55,
          }
        }
      >
        <Text />
      </View>
    </View>
  </View>
</View>
`;

exports[`Molecules/Avatar passes the snapshot test when used in a group 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [],
        },
      }
    }
    collapsable={false}
    spacing="2xl"
    style={
      Object {
        "display": "flex",
        "transform": Array [],
      }
    }
    truncatedBackgroundColor="neutral.200"
  >
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "flex-start",
          "display": "flex",
          "transform": Array [],
        }
      }
    >
      <View
        accessibilityRole="image"
        accessible={true}
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        loaderType="spinner"
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#F7F9FC",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderColor": "#FFFFFF",
            "borderRadius": 1000,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "borderWidth": 2,
            "display": "flex",
            "height": 55,
            "justifyContent": "center",
            "marginLeft": 0,
            "position": "relative",
            "transform": Array [],
            "width": 55,
            "zIndex": 3,
          }
        }
        tint="dark"
        overlayTransitionDuration={600}
      >
        <View
          animatedStyle={
            Object {
              "value": Object {
                "transform": Array [],
              },
            }
          }
          collapsable={false}
          style={
            Object {
              "bottom": 0,
              "display": "flex",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "transform": Array [],
              "width": "100%",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "justifyContent": "center",
                },
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "color": "#C5CEE0",
                    "flex": 0,
                  },
                ],
              ]
            }
          >
            <View
              accessibilityLabel="Loading indicator"
              accessibilityRole="progressbar"
              accessible={true}
              animating={true}
              spinnerSize={15}
              style={
                Object {
                  "height": 15,
                  "width": 15,
                }
              }
              variant="spinner"
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "rotate": "82.5deg",
                        },
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 15,
                          "transform": Array [
                            Object {
                              "translateY": 0,
                            },
                            Object {
                              "rotate": "-172.5deg",
                            },
                          ],
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          Object {
                            "height": 7.5,
                            "overflow": "hidden",
                            "width": 15,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "borderColor": "#C5CEE0",
                              "borderRadius": 7.5,
                              "borderWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "rotate": "82.5deg",
                        },
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "top": 7.5,
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 15,
                          "transform": Array [
                            Object {
                              "translateY": -7.5,
                            },
                            Object {
                              "rotate": "352.5deg",
                            },
                          ],
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          Object {
                            "height": 7.5,
                            "overflow": "hidden",
                            "width": 15,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "borderColor": "#C5CEE0",
                              "borderRadius": 7.5,
                              "borderWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        accessibilityRole="image"
        accessible={true}
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        loaderType="spinner"
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#F7F9FC",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderColor": "#FFFFFF",
            "borderRadius": 1000,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "borderWidth": 2,
            "display": "flex",
            "height": 55,
            "justifyContent": "center",
            "marginLeft": 40,
            "position": "absolute",
            "transform": Array [],
            "width": 55,
            "zIndex": 2,
          }
        }
        tint="dark"
        overlayTransitionDuration={600}
      >
        <View
          animatedStyle={
            Object {
              "value": Object {
                "transform": Array [],
              },
            }
          }
          collapsable={false}
          style={
            Object {
              "bottom": 0,
              "display": "flex",
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "transform": Array [],
              "width": "100%",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "justifyContent": "center",
                },
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "color": "#C5CEE0",
                    "flex": 0,
                  },
                ],
              ]
            }
          >
            <View
              accessibilityLabel="Loading indicator"
              accessibilityRole="progressbar"
              accessible={true}
              animating={true}
              spinnerSize={15}
              style={
                Object {
                  "height": 15,
                  "width": 15,
                }
              }
              variant="spinner"
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "rotate": "82.5deg",
                        },
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 15,
                          "transform": Array [
                            Object {
                              "translateY": 0,
                            },
                            Object {
                              "rotate": "-172.5deg",
                            },
                          ],
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          Object {
                            "height": 7.5,
                            "overflow": "hidden",
                            "width": 15,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "borderColor": "#C5CEE0",
                              "borderRadius": 7.5,
                              "borderWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "rotate": "82.5deg",
                        },
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "top": 7.5,
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 15,
                          "transform": Array [
                            Object {
                              "translateY": -7.5,
                            },
                            Object {
                              "rotate": "352.5deg",
                            },
                          ],
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          Object {
                            "height": 7.5,
                            "overflow": "hidden",
                            "width": 15,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "borderColor": "#C5CEE0",
                              "borderRadius": 7.5,
                              "borderWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#EDF1F7",
            "borderColor": "#FFFFFF",
            "borderRadius": 1000,
            "borderWidth": 2,
            "display": "flex",
            "height": 55,
            "justifyContent": "center",
            "marginLeft": 80,
            "position": "absolute",
            "transform": Array [],
            "width": 55,
            "zIndex": 1,
          }
        }
      >
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          animatedStyle={
            Object {
              "value": Object {
                "transform": Array [],
              },
            }
          }
          collapsable={false}
          style={
            Object {
              "color": "#1A2138",
              "display": "flex",
              "fontFamily": "Poppins-Regular",
              "fontSize": 18.4,
              "fontStyle": "normal",
              "fontWeight": "400",
              "includeFontPadding": false,
              "letterSpacing": 0,
              "lineHeight": 28,
              "transform": Array [],
            }
          }
          variant="p1"
        >
          +1
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Molecules/Avatar withBadge HOC works as expected 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [],
        },
      }
    }
    collapsable={false}
    direction="horizontal"
    spacing="s"
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "transform": Array [],
      }
    }
  >
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 12,
          "transform": Array [],
        }
      }
    >
      <View
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        style={
          Object {
            "alignSelf": "flex-start",
            "display": "flex",
            "transform": Array [],
          }
        }
      >
        <View
          accessibilityRole="image"
          accessible={true}
          animatedStyle={
            Object {
              "value": Object {
                "transform": Array [],
              },
            }
          }
          collapsable={false}
          loaderType="spinner"
          onLayout={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#00ffff",
              "borderBottomLeftRadius": undefined,
              "borderBottomRightRadius": undefined,
              "borderColor": "#FFFFFF",
              "borderRadius": 1000,
              "borderTopLeftRadius": undefined,
              "borderTopRightRadius": undefined,
              "borderWidth": 2,
              "display": "flex",
              "height": 55,
              "justifyContent": "center",
              "transform": Array [],
              "width": 55,
            }
          }
          tint="dark"
          overlayTransitionDuration={600}
        >
          <View
            animatedStyle={
              Object {
                "value": Object {
                  "transform": Array [],
                },
              }
            }
            collapsable={false}
            style={
              Object {
                "bottom": 0,
                "display": "flex",
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "transform": Array [],
                "width": "100%",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    Object {
                      "color": "#C5CEE0",
                      "flex": 0,
                    },
                  ],
                ]
              }
            >
              <View
                accessibilityLabel="Loading indicator"
                accessibilityRole="progressbar"
                accessible={true}
                animating={true}
                spinnerSize={15}
                style={
                  Object {
                    "height": 15,
                    "width": 15,
                  }
                }
                variant="spinner"
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "bottom": 0,
                      "justifyContent": "center",
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "height": 15,
                        "transform": Array [
                          Object {
                            "rotate": "82.5deg",
                          },
                          Object {
                            "rotate": "0deg",
                          },
                        ],
                        "width": 15,
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        Object {
                          "height": 7.5,
                          "overflow": "hidden",
                          "width": 15,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "height": 15,
                            "transform": Array [
                              Object {
                                "translateY": 0,
                              },
                              Object {
                                "rotate": "-172.5deg",
                              },
                            ],
                            "width": 15,
                          }
                        }
                      >
                        <View
                          collapsable={false}
                          style={
                            Object {
                              "height": 7.5,
                              "overflow": "hidden",
                              "width": 15,
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "borderColor": "#C5CEE0",
                                "borderRadius": 7.5,
                                "borderWidth": 1.5,
                                "height": 15,
                                "width": 15,
                              }
                            }
                          />
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "bottom": 0,
                      "justifyContent": "center",
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "height": 15,
                        "transform": Array [
                          Object {
                            "rotate": "82.5deg",
                          },
                          Object {
                            "rotate": "0deg",
                          },
                        ],
                        "width": 15,
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        Object {
                          "height": 7.5,
                          "overflow": "hidden",
                          "top": 7.5,
                          "width": 15,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "height": 15,
                            "transform": Array [
                              Object {
                                "translateY": -7.5,
                              },
                              Object {
                                "rotate": "352.5deg",
                              },
                            ],
                            "width": 15,
                          }
                        }
                      >
                        <View
                          collapsable={false}
                          style={
                            Object {
                              "height": 7.5,
                              "overflow": "hidden",
                              "width": 15,
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "borderColor": "#C5CEE0",
                                "borderRadius": 7.5,
                                "borderWidth": 1.5,
                                "height": 15,
                                "width": 15,
                              }
                            }
                          />
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <RNGestureHandlerButton
          collapsable={false}
          exclusive={true}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
        >
          <View
            accessibilityLabel="Press me!"
            accessibilityRole="button"
            accessible={true}
            style={Object {}}
          >
            <View
              animatedStyle={
                Object {
                  "value": Object {
                    "transform": Array [],
                  },
                }
              }
              collapsable={false}
              onLayout={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "alignSelf": "flex-start",
                  "backgroundColor": "#A2D608",
                  "borderRadius": 1000,
                  "bottom": -0,
                  "display": "flex",
                  "height": 15,
                  "justifyContent": "center",
                  "minWidth": 15,
                  "position": "absolute",
                  "right": -0,
                  "transform": Array [],
                  "zIndex": 1300,
                }
              }
            />
          </View>
        </RNGestureHandlerButton>
      </View>
    </View>
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 12,
          "transform": Array [],
        }
      }
    >
      <View
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        style={
          Object {
            "alignSelf": "flex-start",
            "display": "flex",
            "transform": Array [],
          }
        }
      >
        <View
          animatedStyle={
            Object {
              "value": Object {
                "transform": Array [],
              },
            }
          }
          collapsable={false}
          onLayout={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#00ffff",
              "borderColor": "#FFFFFF",
              "borderRadius": 1000,
              "borderWidth": 2,
              "display": "flex",
              "height": 55,
              "justifyContent": "center",
              "transform": Array [],
              "width": 55,
            }
          }
        >
          <Text
            accessibilityRole="text"
            accessible={true}
            allowFontScaling={true}
            animatedStyle={
              Object {
                "value": Object {
                  "transform": Array [],
                },
              }
            }
            collapsable={false}
            style={
              Object {
                "color": "#1A2138",
                "display": "flex",
                "fontFamily": "Poppins-Regular",
                "fontSize": 18.4,
                "fontStyle": "normal",
                "fontWeight": "400",
                "includeFontPadding": false,
                "letterSpacing": 0,
                "lineHeight": 28,
                "transform": Array [],
              }
            }
            variant="p1"
          >
            RA
          </Text>
        </View>
        <RNGestureHandlerButton
          collapsable={false}
          exclusive={true}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
        >
          <View
            accessibilityLabel="Press me!"
            accessibilityRole="button"
            accessible={true}
            style={Object {}}
          >
            <View
              animatedStyle={
                Object {
                  "value": Object {
                    "transform": Array [],
                  },
                }
              }
              collapsable={false}
              onLayout={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "alignSelf": "flex-start",
                  "backgroundColor": "#FF4B42",
                  "borderRadius": 1000,
                  "bottom": -0,
                  "display": "flex",
                  "height": 20,
                  "justifyContent": "center",
                  "minWidth": 20,
                  "position": "absolute",
                  "right": -0,
                  "transform": Array [],
                  "zIndex": 1300,
                }
              }
            >
              <Text
                accessibilityRole="text"
                accessible={true}
                allowFontScaling={true}
                animatedStyle={
                  Object {
                    "value": Object {
                      "transform": Array [],
                    },
                  }
                }
                collapsable={false}
                style={
                  Object {
                    "color": "#FFFFFF",
                    "display": "flex",
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 11.5,
                    "fontStyle": "normal",
                    "fontWeight": "500",
                    "includeFontPadding": false,
                    "letterSpacing": 0,
                    "lineHeight": 16,
                    "paddingHorizontal": 4,
                    "transform": Array [],
                  }
                }
                variant="btn4"
              >
                0
              </Text>
            </View>
          </View>
        </RNGestureHandlerButton>
      </View>
    </View>
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "transform": Array [],
        }
      }
    >
      <View
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        style={
          Object {
            "alignSelf": "flex-start",
            "display": "flex",
            "transform": Array [],
          }
        }
      >
        <View
          animatedStyle={
            Object {
              "value": Object {
                "transform": Array [],
              },
            }
          }
          collapsable={false}
          onLayout={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#ff0000",
              "borderColor": "#FFFFFF",
              "borderRadius": 1000,
              "borderWidth": 2,
              "display": "flex",
              "height": 55,
              "justifyContent": "center",
              "transform": Array [],
              "width": 55,
            }
          }
        />
        <RNGestureHandlerButton
          collapsable={false}
          exclusive={true}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
        >
          <View
            accessibilityLabel="Press me!"
            accessibilityRole="button"
            accessible={true}
            style={Object {}}
          >
            <View
              animatedStyle={
                Object {
                  "value": Object {
                    "transform": Array [],
                  },
                }
              }
              collapsable={false}
              onLayout={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "alignSelf": "flex-start",
                  "backgroundColor": "#6A7BFF",
                  "borderRadius": 1000,
                  "bottom": -5,
                  "display": "flex",
                  "height": 25,
                  "justifyContent": "center",
                  "minWidth": 25,
                  "position": "absolute",
                  "right": -5,
                  "transform": Array [],
                  "zIndex": 1300,
                }
              }
            >
              <Text />
            </View>
          </View>
        </RNGestureHandlerButton>
      </View>
    </View>
  </View>
</View>
`;
